[package]
name = "rage_conv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
notify = "6.1.1"
windows = "0.51.1"
tokio = { version = "1", features = ["full"] }
libc = "0.2.155"
scopeguard = "1.2.0"

[build-dependencies]
ignore = "0.4.20"
